--- a/optimizing_code_common_books.ipynb
+++ b/optimizing_code_common_books.ipynb
@@ -114,7 +114,7 @@
    ],
    "source": [
     "start = time.time()\n",
-    "recent_coding_books =  set(recent_books).intersection(set(coding_books))\n",
+    "recent_coding_books =  set(recent_books).intersection(coding_books)\n",
     "print(len(recent_coding_books))\n",
     "print('Duration: {} seconds'.format(time.time() - start))\n",
     "p"
